--- a/src/main/webapp/app/cart.component.html
+++ b/src/main/webapp/app/cart.component.html
@@ -1,12 +1,32 @@
-<h2>Cart</h2>
-<ul class="products">
-  <li *ngFor="let product of products" (click)="onSelect(product)" [class.selected]="product === selectedProduct">
-    <span class="product-element">
-      <span class="badge">{{product.name}}</span> {{product.price}}
-    </span>
-    <span>{{product.quantity}}</span>
-    <button class="remove-button" (click)="removeProduct(product, $event)">Remove</button>
-  </li>
-</ul>
+
+
+<div class="container-fluid">
+<h3>Your shopping cart</h3>
+<div *ngFor="let product of products" class="row">
+  <div class="col-md-1">
+      <a href="#" class="thumbnail">
+        <img src="img/{{product.imageId}}" class="img-rounded" style="max-height: 120px; overflow:hidden"/>
+      </a>
+  </div>
+  <div class="col-md-2">{{product.name}}</div>
+  <div class="col-md-1"><price-display [price]=product.price></price-display></div>
+  <!-- <div class="col-md-1"><label>Quantity:</label><input [ngModel]="product.quantity" (ngModelChange)="updateProductQuantity(product,$event)"></input></div> -->
+  <div class="col-md-1">
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon1">Quantity</span>
+      <input name="quantity" type="text" class="form-control" aria-describedby="basic-addon1" [ngModel]="product.quantity" (ngModelChange)="updateProductQuantity(product,$event)">
+    </div>
+  </div>
+  <div class="col-md-1"><button type="button" class="btn btn-danger" (click)=removeProduct(product)>Delete</button></div>
+</div>
+<div>
+  <label>Total: </label>{{cartInfo.subTotal | fixedCurrency}}
+</div>
 <div class="error" *ngIf="error">{{error}}</div>
-<h2 (click)="checkout">BUY NOW</h2>
+<div class="row">
+  <div class="col-md-12">
+    <button type="button pull-left" class="btn btn-primary" (click)="checkout()">Checkout</button>
+    <button type="button pull-right" class="btn btn-danger" (click)="emptyCart()">Empty Cart</button>
+  </div>
+</div>
+</div>
