--- a/src/main/webapp/app/product-list.component.html
+++ b/src/main/webapp/app/product-list.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div *ngFor="let product of products" (click)="onSelect(product)" class="col-md-4 col-xs-5">
       <div class="col-md-7">
-          <a href="#" class="thumbnail">
+          <a class="thumbnail">
             <img src="img/{{product.imageId}}" class="img-rounded" style="max-height: 160px; overflow:hidden"/>
           </a>
       </div>
